--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
     "ejs": "^3.1.8",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "fs": "^0.0.1-security",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.20",
-    "request": "^2.88.2"
+    "path": "^0.12.7",
+    "request": "^2.88.2",
+    "sequelize": "^6.25.4"
   }
 }
