--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "express-session": "^1.17.3",
     "fs": "^0.0.1-security",
     "mysql": "^2.18.1",
+    "mysql2": "^2.3.3",
     "nodemon": "^2.0.20",
     "path": "^0.12.7",
     "request": "^2.88.2",
